udpate swagger for blog crud
